--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -50,6 +50,33 @@
   color: white;
 }
 
+.app__price {
+  width: max-content;
+  margin: 0.25rem auto;
+  padding: 0.25rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.app__product-details {
+  background-color: var(--secondary-color);
+}
+
+.app__product-details div {
+  margin: 1rem auto;
+}
+
+.app__badge {
+  margin: 0 0.5rem;
+  padding: 0;
+  height: 25px;
+  width: 25px;
+  /* color: var(--white-color); */
+  color: var(--badge-bg-color);
+  border-radius: 50%;
+  padding: 0.25rem;
+}
+
 #app__logo {
   font-size: 1.2rem;
 }
