--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -18,6 +18,7 @@ html {
   --red-color: rgb(161, 4, 4);
   --button-bg-color: rgba(25, 150, 170, 0.822);
   --button-hover-color: rgb(4, 41, 77);
+  --badge-bg-color: rgb(255, 79, 79);
 }
 
 body {
