--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/styles/index.css" />
   <link rel="stylesheet" href="/styles/app.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
-  <script src="scripts/mobile.js" defer></script>
+  <link rel="stylesheet" href="/font-awesome/css/fontawesome.css" />
+  <link rel="stylesheet" href="/font-awesome/css/all.css" />
   <title>Welcome</title>
 </head>
