--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/styles/index.css" />
   <link rel="stylesheet" href="/styles/app.css" />
   <link rel="stylesheet" href="/styles/nav.css" />
-  <link rel="stylesheet" href="/font-awesome/css/fontawesome.css" />
-  <link rel="stylesheet" href="/font-awesome/css/all.css" />
+  <link rel="stylesheet" href="/font_awesome/css/fontawesome.css" />
+  <link rel="stylesheet" href="/font_awesome/css/all.css" />
   <title>Welcome</title>
 </head>
