--- a/public/styles/product-item.css
+++ b/public/styles/product-item.css
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   gap: 2rem;
   align-items: center;
+  padding-left: 0 !important;
 }
 
 .product-grid li {
