--- a/views/customer/cart.ejs
+++ b/views/customer/cart.ejs
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <%-include("../includes/head") %>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-  />
   <link rel="stylesheet" href="/styles/cart.css" />
   <script src="/scripts/cartControl.js" defer></script>
   <body>
     <%-include("../includes/header") %>
     <main>
-      <section class="h-100 h-custom" style="background-color: #eee">
+      <section class="h-100 h-custom">
         <div class="container py-5 h-100">
           <div
             class="row d-flex justify-content-center align-items-center h-100"
@@ -115,7 +109,10 @@
                       <!---->
                     </div>
                     <div class="col-lg-5">
-                      <div class="card bg-primary text-white rounded-3">
+                      <div
+                        class="card text-white rounded-3"
+                        style="background-color: var(--bg-nav)"
+                      >
                         <div class="card-body">
                           <div
                             class="d-flex justify-content-between align-items-center mb-4"
