--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,9 +9,14 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="/styles/index.css" />
-  <link rel="stylesheet" href="/styles/app.css" />
-  <link rel="stylesheet" href="/styles/nav.css" />
+  <link rel="stylesheet" href="/styles/navbar.css" />
   <link rel="stylesheet" href="/font_awesome/css/fontawesome.css" />
   <link rel="stylesheet" href="/font_awesome/css/all.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
   <title>Welcome</title>
 </head>
