--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,18 +1,19 @@
-<header id="main-header">
-  <nav class="app__nav">
-    <a id="app__logo" class="app-text" href="/">E-Commerce</a>
-    <div id="modal">
+<header>
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"
+        >FlashE <i class="fa-solid fa-shop"></i
+      ></a>
+      <form class="d-flex">
+        <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-info" type="submit">Search</button>
+      </form>
       <%-include("./nav-items") %>
     </div>
-    <button id="app__mobile-menu-btn">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
   </nav>
-
 </header>
-<aside id="app__mobile-menu">
-  <%-include("./nav-items") %>
-</aside>
-
