--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <%-include("includes/head") %>
-  <body>
+  <body style="background-color: #f2f2f2">
     <%-include("includes/header") %>
-    <main>
-      <h1>Home</h1>
-    </main>
+    <main></main>
   </body>
 </html>
