--- a/views/customer/login.ejs
+++ b/views/customer/login.ejs
@@ -6,28 +6,91 @@
   <body>
     <header><%- include("../includes/header") %></header>
     <main>
-      <form class="app__form" action="/login" method="POST">
-        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-        <h1>Login</h1>
-        <% if(inputData.hasError) {%>
-        <p class="app__error"><%= inputData.message %></p>
-        <% } %>
-        <div class="form-control">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            value="<%= inputData.email %>"
-            required
-          />
+      <section class="">
+        <div class="px-4 py-5 px-md-5 text-center text-lg-start">
+          <div class="container">
+            <div class="row gx-lg-5 align-items-center">
+              <div class="col-lg-6 mb-5 mb-lg-0">
+                <h1 class="my-5 display-3 fw-bold ls-tight">
+                  The best offer <br />
+                  <span class="text-warning">for your business</span>
+                </h1>
+                <p style="color: hsl(217, 10%, 50.8%)">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Eveniet, itaque accusantium odio, soluta, corrupti aliquam
+                  quibusdam tempora at cupiditate quis eum maiores libero
+                  veritatis? Dicta facilis sint aliquid ipsum atque?
+                </p>
+              </div>
+
+              <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="card">
+                  <div class="card-body py-5 px-md-5">
+                    <h1 class="text-center text-dark"><b>Log in</b></h1>
+                    <form action="/login" method="POST">
+                      <input
+                        type="hidden"
+                        name="_csrf"
+                        value="<%= locals.csrfToken %>"
+                      />
+                      <!-- Email input -->
+                      <div class="form-outline mb-4">
+                        <input
+                          class="form-control"
+                          type="email"
+                          id="email"
+                          name="email"
+                          value="<%= inputData.email %>"
+                          required
+                        />
+                        <label for="email">Email</label>
+                      </div>
+
+                      <!-- Password input -->
+                      <div class="form-outline mb-4">
+                        <input
+                          class="form-control"
+                          type="password"
+                          id="password"
+                          name="password"
+                          required
+                        />
+                        <label for="password">Password</label>
+                      </div>
+
+                      <!-- Submit button -->
+                      <button
+                        type="submit"
+                        class="btn btn-warning btn-block mb-4"
+                      >
+                        Log in
+                      </button>
+
+                      <div class="text-center">
+                        <p>or log in with:</p>
+
+                        <button
+                          type="button"
+                          class="btn btn-link btn-floating mx-1"
+                        >
+                          <i class="fab fa-google"></i>
+                        </button>
+
+                        <button
+                          type="button"
+                          class="btn btn-link btn-floating mx-1"
+                        >
+                          <i class="fab fa-github"></i>
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-control">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
-        </div>
-        <button class="app__btn">Confirm</button>
-      </form>
+      </section>
     </main>
   </body>
 </html>
