--- a/views/customer/signup.ejs
+++ b/views/customer/signup.ejs
@@ -5,38 +5,76 @@
   <body>
     <header><%- include("../includes/header") %></header>
     <main>
-      <form class="app__form" action="/signup" method="POST">
-        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-        <h1>Signup</h1>
-        <% if(inputData.hasError) {%>
-        <p class="app__error"><%= inputData.message %></p>
-        <% } %>
-        <div class="form-control">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            value="<%= inputData.email %>"
-            required
-          />
+      <div class="col-lg-6 my-5 mx-auto">
+        <div class="card">
+          <div class="card-body py-5 px-md-5">
+            <h1 class="text-center text-dark"><b>Register</b></h1>
+            <% if(inputData.hasError) {%>
+            <p class="app__error"><%= inputData.message %></p>
+            <% } %>
+            <form action="/signup" method="POST">
+              <input
+                type="hidden"
+                name="_csrf"
+                value="<%= locals.csrfToken %>"
+              />
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="email"
+                  id="email"
+                  name="email"
+                  value="<%= inputData.email %>"
+                  required
+                />
+                <label for="email">Email</label>
+              </div>
+              <!-- Confirm-Email input -->
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="email"
+                  id="confirm-email"
+                  name="confirm-email"
+                  value="<%= inputData.confirmEmail%>"
+                  required
+                />
+                <label for="confirm-email">Confirm Email</label>
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="password"
+                  id="password"
+                  name="password"
+                  required
+                />
+                <label for="password">Password</label>
+              </div>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-warning btn-block mb-4">
+                Submit
+              </button>
+
+              <div class="text-center">
+                <p>or register with:</p>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-google"></i>
+                </button>
+
+                <button type="button" class="btn btn-link btn-floating mx-1">
+                  <i class="fab fa-github"></i>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="form-control">
-          <label for="confirm-email">Confirm Email</label>
-          <input
-            type="email"
-            id="confirm-email"
-            name="confirm-email"
-            value="<%= inputData.confirmEmail%>"
-            required
-          />
-        </div>
-        <div class="form-control">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" />
-        </div>
-        <button class="app__btn">Confirm</button>
-      </form>
+      </div>
     </main>
   </body>
 </html>
