--- a/views/details.ejs
+++ b/views/details.ejs
@@ -23,8 +23,15 @@
             <p><b>Description: </b><%=product.description%></p>
             <p><b>Condition: </b>New</p>
 
-            <label><b>Quantity:</b></label>
-            <input id="item-quantity" type="number" value="1" />
+            <label for="item-quantity"><b>Quantity:</b></label>
+            <input
+              id="item-quantity"
+              name="item-quantity"
+              type="number"
+              value="1"
+              min="1"
+              max="10"
+            />
             <br />
             <button
               class="btn btn-warning"
