--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,7 +11,7 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button class="btn btn-outline-info" type="submit">Search</button>
+        <button class="btn btn-outline-warning" type="submit">Search</button>
       </form>
       <%-include("./nav-items") %>
     </div>
