--- a/views/customer/cart.ejs
+++ b/views/customer/cart.ejs
@@ -18,7 +18,6 @@
                     <div class="col-lg-7">
                       <h5 class="mb-3">
                         <a href="/products" class="text-body"
-                          ><i class="fas fa-long-arrow-alt-left me-2"></i
                           >Continue shopping</a
                         >
                       </h5>
@@ -33,14 +32,14 @@
                             You have <%=cartInfo.totalItems%> items in your cart
                           </p>
                         </div>
-                        <div>
+                        <!-- <div>
                           <p class="mb-0">
                             <span class="text-muted">Sort by:</span>
                             <a href="#!" class="text-body"
                               >price <i class="fas fa-angle-down mt-1"></i
                             ></a>
                           </p>
-                        </div>
+                        </div> -->
                       </div>
                       <!---->
                       <% for (let i = 0; i < products.length; i++) { %>
@@ -227,19 +226,25 @@
                             </p>
                           </div>
 
-                          <button
-                            type="button"
-                            class="btn btn-warning btn-block btn-lg"
-                            class="d-flex justify-content-between"
-                          >
-                            <span class="cart-total-price"
-                              >$<%=cartInfo.totalPrice%></span
+                          <form action="/orders" method="POST">
+                            <input
+                              type="hidden"
+                              name="_csrf"
+                              value="<%= locals.csrfToken %>"
+                            />
+                            <button
+                              type="submit"
+                              class="btn btn-warning btn-block btn-lg"
+                              class="d-flex justify-content-between"
+                              role="button"
                             >
-                            <span
-                              >Checkout
-                              <i class="fas fa-long-arrow-alt-right ms-2"></i
-                            ></span>
-                          </button>
+                              <span class="cart-total-price"
+                                >$<%=cartInfo.totalPrice%></span
+                              >
+                              <!-- Checkout -->
+                              Buy Products
+                            </button>
+                          </form>
                         </div>
                       </div>
                     </div>
