--- a/views/customer/signup.ejs
+++ b/views/customer/signup.ejs
@@ -18,7 +18,6 @@
                 name="_csrf"
                 value="<%= locals.csrfToken %>"
               />
-              <!-- Email input -->
               <div class="form-outline mb-4">
                 <input
                   class="form-control"
@@ -30,7 +29,6 @@
                 />
                 <label for="email">Email</label>
               </div>
-              <!-- Confirm-Email input -->
               <div class="form-outline mb-4">
                 <input
                   class="form-control"
@@ -43,7 +41,6 @@
                 <label for="confirm-email">Confirm Email</label>
               </div>
 
-              <!-- Password input -->
               <div class="form-outline mb-4">
                 <input
                   class="form-control"
@@ -55,7 +52,56 @@
                 <label for="password">Password</label>
               </div>
 
-              <!-- Submit button -->
+              <hr style="color: black; height: 4px" />
+
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="text"
+                  id="fullname"
+                  name="fullname"
+                  value="<%= inputData.fullName%>"
+                  required
+                />
+                <label for="fullname">Full Name</label>
+              </div>
+
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="test"
+                  id="street"
+                  name="street"
+                  value="<%= inputData.street%>"
+                  required
+                />
+                <label for="street">Street</label>
+              </div>
+
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="text"
+                  id="postalcode"
+                  name="postalcode"
+                  value="<%= inputData.postalCode%>"
+                  required
+                />
+                <label for="postalcode">Postal Code</label>
+              </div>
+
+              <div class="form-outline mb-4">
+                <input
+                  class="form-control"
+                  type="text"
+                  id="city"
+                  name="city"
+                  value="<%= inputData.city%>"
+                  required
+                />
+                <label for="city">City</label>
+              </div>
+
               <button type="submit" class="btn btn-warning btn-block mb-4">
                 Submit
               </button>
