--- a/views/includes/nav-items.ejs
+++ b/views/includes/nav-items.ejs
@@ -18,6 +18,7 @@
   <li class="navbar-brand"><a href="/admin/products">Manage Products</a></li>
   <li class="navbar-brand"><a href="/admin/orders">Manage Orders</a></li>
   <% } %> <% if (locals.isAuth){ %>
+  <li class="navbar-brand"><a href="/orders">Orders</a></li>
   <li class="navbar-brand">
     <form action="/logout" method="POST">
       <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
