--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
-    <%- include("../includes/header") %>
+    <%- include("../../shared/includes/header") %>
     <main>
       <h1 class="text-center my-4">Add a New Item</h1>
       <form
