--- a/views/customer/authorize/signup.ejs
+++ b/views/customer/authorize/signup.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
-    <header><%- include("../includes/header") %></header>
+    <header><%- include("../../shared/includes/header") %></header>
     <main>
       <div class="col-lg-6 my-5 mx-auto">
         <div class="card">
