--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <body>
-    <header><%- include("includes/header") %></header>
+    <header><%- include("../../shared/includes/header") %></header>
     <main>
       <section>
         <div class="m-4 row row-cols-1 row-cols-md-4 g-4">
           <div class="col">
             <% for (const product of products) { %> <%-
-            include("includes/product-item", {product: product}) %> <% } %>
+            include("../../shared/includes/product-item", {product: product}) %>
+            <% } %>
           </div>
         </div>
       </section>
