--- a/views/customer/products/details.ejs
+++ b/views/customer/products/details.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <link rel="stylesheet" href="/styles/details.css" />
   <script src="/scripts/cartBadge.js" defer></script>
   <body>
-    <header><%- include("includes/header") %></header>
+    <header><%- include("../../shared/includes/header") %></header>
     <main>
       <div class="container">
         <div class="row">
