--- a/views/customer/authorize/login.ejs
+++ b/views/customer/authorize/login.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <link rel="stylesheet" href="styles/forms.css" />
 
   <body>
-    <header><%- include("../includes/header") %></header>
+    <header><%- include("../../shared/includes/header") %></header>
     <main>
       <section class="">
         <div class="px-4 py-5 px-md-5 text-center text-lg-start">
