--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include("../includes/head") %>
+  <%-include("../../shared/includes/head") %>
   <link rel="stylesheet" href="/styles/cart.css" />
   <script src="/scripts/cartControl.js" defer></script>
   <body>
-    <%-include("../includes/header") %>
+    <%-include("../../shared/includes/header") %>
     <main>
       <section class="h-100 h-custom">
         <div class="container py-5 h-100">
