--- a/views/customer/orders/all-orders.ejs
+++ b/views/customer/orders/all-orders.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <body>
-    <header><%- include("../includes/header") %></header>
+    <header><%- include("../../shared/includes/header") %></header>
     <main>
       <div class="container">
         <h1 class="text-center m-4">All your orders</h1>
@@ -15,7 +15,7 @@
           <a class="btn btn-warning" href="/">Continue Shopping</a>
         </p>
         <% } else { %> <% for (let order of orders) { %>
-        <div class="card w-75 bg-light my-1 mx-auto border border-dark">
+        <div class="card w-75 bg-light my-2 mx-auto border border-dark">
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <div class="d-flex">
@@ -25,8 +25,8 @@
               </div>
               <h5 class="text-uppercase text-warning"><%= order.status %></h5>
             </div>
-            <div class="text text-secondary mb-1">February 12th, 2023</div>
             <% for(let item of order.items){ %> <% console.log(item) %>
+            <div class="text text-secondary mb-1"><%= order.date %></div>
             <p class="card-text">
               <span class="text-uppercase fw-light fst-italic"
                 ><%= item.product.name %> ($<%= item.product.price %>)</span
