--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,24 +1,19 @@
 <ul class="nav-links">
+  <% if(!locals.isAdmin){ %>
   <li class="navbar-brand">
-    <a href="/cart/cart">Cart</a>
+    <a href="/cart">Cart</a>
     <span id="cartTotalItems" class="badge bg-warning" style="color: black"
       ><%=locals.cart.totalItems %></span
     >
   </li>
-  <% if(!locals.isAuth){ %>
+  <li class="navbar-brand"><a href="/orders">Orders</a></li>
+  <% } %> <% if(!locals.isAuth){ %>
   <li class="navbar-brand"><a href="/signup">Register</a></li>
   <li class="navbar-brand"><a href="/login">Login</a></li>
-  <% } %>
-
-  <!-- <% if(!locals.isAdmin){ %> 
-        <li><a class="app-text" href="/cart">Cart</a></li>
-    <% } %> -->
-
-  <% if (locals.isAdmin) { %>
+  <% } %> <% if (locals.isAdmin) { %>
   <li class="navbar-brand"><a href="/admin/products">Manage Products</a></li>
   <li class="navbar-brand"><a href="/admin/orders">Manage Orders</a></li>
   <% } %> <% if (locals.isAuth){ %>
-  <li class="navbar-brand"><a href="/orders">Orders</a></li>
   <li class="navbar-brand">
     <form action="/logout" method="POST">
       <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
