fixed favicon 404 errors

--- a/views/admin/products/product-detail.ejs
+++ b/views/admin/products/product-detail.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../shared/includes/head") %>
+  <%- include("../../shared/includes/head") %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
-    <%- include("../shared/includes/header")%>
+    <%- include("../../shared/includes/header")%>
     <main>
       <%- include("includes/product-form", {product: product, imageRequired:
       true}) %>
